refactor to create 100 circles using loops

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,7 +8,7 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: rgb(208, 171, 243);
 			font-size: 300%;
 			text-align: center;
 			display: block;
@@ -65,7 +65,7 @@
 			// TODO 2 - Variable declarations 
 			var positionX = 0;
 			var points = 0;
-
+            var speed = 10;
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -74,7 +74,13 @@
 			*/
 			function update() {
 				moveBoxTo(positionX);
-				positionX = positionX + 10;
+				positionX = positionX + speed;
+				if (positionX > boardWidth) {
+					speed *= -1;
+				} if (positionX < 0){
+					speed *= -1;
+				}
+
 
 			};
 
@@ -84,8 +90,13 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				positionX = 0;
+				positionX += speed;
 				points = points + 1;
+				if(speed > 0){
+				speed = speed += 3;
+				} else if(speed < 0){
+					speed = speed - 3;
+				}
 				changeBoxText(points);
 
   
